Version 1.1.11+svn:
 * language and i18n:
   * updated translations: French, German, Polish, Valencian
   * updated MANUAL: Czech, German
 * multiplayer maps:
    * revised multiplayer maps: Hamlets, Meteor Lake, Sulla's Ruins

Version 1.1.11:
 * Python AI
   * there is now wesnoth.get_version()
 * WML engine
   * [event]s can now be written also inside [era]s (the [event]s are included
     in every scenario played using that era)
   * complex missiles frames are now in macros
 * language and i18n:
   * updated translations: Bulgarian, Catalan, Dutch, French, German, Italian,
     Japanese, Russian, Spanish, Swedish
   * updated MANUAL: Japanese, Swedish

Version 1.1.10:
 * campaigns:
   * Heir to the Throne
     * made it a lot harder to kill Li'sar in Ford of Abez by giving her
       reinforcements more often
   * The South Guard
     * Animation for Deoran's Mace attack (from special AMLA)
 * language and i18n:
    * new translations: Valencia
    * updated translations: Czech, English (British), Finnish, German, Italian,
      Japanese, Polish, Portuguese (Brazil), Slovak, Serbian, Swedish
    * new or updated man pages: Czech, English (British), French, German,
      Italian, Japanese, Portuguese (Brazil), Slovak, Swedish
    * removed (outdated) man pages: Hungarian
    * updated MANUAL: Swedish
 * multiplayer maps:
   * revised multiplayer maps: Den of Onis, Hamlets, Meteor Lake, Sablestone
     Delta, Island of the Horatii, Castle Hopping Isle, Siege Castles, King of
     the Hill, Loris River, Forest of Fear, Waterloo Sunset, Merkwuerdigliebe
   * fixed the leader lists in Wesbowl to match current factions
 * multiplayer
   * scenarios can set faction, recruit, leader, and some other initial settings
     previously ignored in multiplayer
 * WML engine
   * now "ai turn" events are fired for all AIs (#6738)
   * recruitment_pattern inside [ai] can now change mid-scenario (#6669)
 * Graphics:
   * New dwarven castle
   * New Swamp overlay tiles