@@ -4,6 +4,8 @@ Version 1.1.11+svn:
    * updated MANUAL: Czech, German
  * multiplayer maps:
     * revised multiplayer maps: Hamlets, Meteor Lake, Sulla's Ruins
+ * engine changes
+    * fixed the terrain defense alias to be used properly
 
 Version 1.1.11:
  * Python AI
